--- a/ha/templates/dashboard.html
+++ b/ha/templates/dashboard.html
@@ -12,17 +12,29 @@
 
 <body>
   <h1>Shack</h1>
+  <table>
+    <tr>
+      <td>Co2</td>
+      <td>{{ co2 }}</td>
+    </tr>
+    <tr>
+      <td>Temperature</td>
+      <td>{{ temperature }}</td>
+    </tr>
+    <tr>
+      <td>Humidity</td>
+      <td>{{ humidity }}</td>
+    </tr>
+  </table>
   <div>
-      <div>Co2: --</div>
-      <div>Temp: --</div>
-      <div>Humidity: --</div>
+    <input type="checkbox">heat</input>
+    <input type="checkbox">tidbyt</input>
   </div>
   <div>
-      <button>show welecome</button>
-      <input type="checkbox">heat</input>
+    <h2>Timer</h2>
   </div>
   <div>
-      <h2>Timers</h2>
+    <h2>Reminder</h2>
   </div>
 </body>
 
