Start of move on off to generate

--- a/ha/templates/dashboard.html
+++ b/ha/templates/dashboard.html
@@ -67,9 +67,12 @@
   </fieldset>
   <div>
     <h2>Timer</h2>
-  </div>
-  <div>
-    <h2>Reminder</h2>
+    <div>
+    <input type="range" min="0" max="100" value="50" id="mySlider">
+    </div>
+    <div>
+    <button>Start</button>
+    </div>
   </div>
 </body>
 
