Spotify flow working

--- a/ha/templates/dashboard.html
+++ b/ha/templates/dashboard.html
@@ -89,6 +89,10 @@
         {% endfor %}
       </ul>
     </div>
+    <div>
+      <h2>Spotify</h2>
+      <a href="{% url 'spotify_login' %}">Login</a>
+    </div>
   </div>
 </body>
 
