Show delay in air monitoring

--- a/ha/templates/dashboard.html
+++ b/ha/templates/dashboard.html
@@ -33,6 +33,10 @@
   <div class="container">
     <table>
       <tr>
+        <td>Last entry:</td>
+        <td>{{ air_delay }}</td>
+      </tr>
+      <tr>
         <td>Co2:</td>
         <td>{{ co2 }}</td>
       </tr>
