--- a/ha/templates/dashboard.html
+++ b/ha/templates/dashboard.html
@@ -42,6 +42,8 @@
       color: red;
       text-align: center;
       padding: 20px;
+      max-width: 80%;
+      margin: 0 auto;
     }
 
     dialog.alert a {
