pixels for simulator

--- a/pushbyt/templates/simulator.html
+++ b/pushbyt/templates/simulator.html
@@ -13,6 +13,9 @@
     #container {
       display: flex;
     }
+    #container img {
+      image-rendering: pixelated;
+    }
   </style>
 </head>
 
