--- a/ha/templates/dashboard.html
+++ b/ha/templates/dashboard.html
@@ -139,6 +139,11 @@
         </a>
       </div>
       <div>
+        <a href="{% url 'control' name='fan_switch'%}?action={% if fan_switch %}turn_off{% else %}turn_on{% endif %}">
+          <span>{% if fan_switch %}✅{% else %}❌{% endif %}</span> Fan
+        </a>
+      </div>
+      <div>
         <a href="{% url 'control' name='heat_power'%}?action=turn_on">
           <span>🔥</span> Heat power
         </a>
